--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="portfolio-img"><img src="assets/img/portfolio/web/getmaid.png" class="img-fluid" alt="project"></div>
             <div class="portfolio-info">
               <h4>Get-Maid</h4>
-              <p>Web</p>
+              <p>Web - Get-Maid website front-end</p>
               <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link"
                 title="Get-Maid"><i class="bx bx-plus"></i></a>
               <a href="https://get-maid.web.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -293,7 +293,7 @@
             <div class="portfolio-img"><img src="assets/img/portfolio/web/CP-TODO.png" class="img-fluid" alt="project"></div>
             <div class="portfolio-info">
               <h4>CP-TODO</h4>
-              <p>Web</p>
+              <p>Web - Todo app using Django</p>
               <a href="assets/img/portfolio/web/CP-TODO.png" data-gall="portfolioGallery" class="venobox preview-link"
                 title="CP-TODO"><i class="bx bx-plus"></i></a>
               <a href="https://cp-todo.herokuapp.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -301,12 +301,23 @@
           </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/web/pizzeria.png" class="img-fluid" alt="project"></div>
+            <div class="portfolio-info">
+              <h4>pizzeria</h4>
+              <p>Web - API for creating pizza orders using Django, DRF</p>
+              <a href="assets/img/portfolio/web/pizzeria.png" data-gall="portfolioGallery" class="venobox preview-link"
+                title="pizzeria"><i class="bx bx-plus"></i></a>
+              <a href="https://github.com/hanzala-sohrab/pizzeria/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/web/IFSC.png" class="img-fluid" alt="project"></div>
             <div class="portfolio-info">
               <h4>IFSC</h4>
-              <p>Web</p>
+              <p>Web - Get bank details from IFSC using Django, DRF</p>
               <a href="assets/img/portfolio/web/IFSC.png" data-gall="portfolioGallery" class="venobox preview-link"
-                title="IFSC"><i class="bx bx-plus"></i></a>
+                 title="IFSC"><i class="bx bx-plus"></i></a>
               <a href="https://django-ifsc.herokuapp.com" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -315,7 +326,7 @@
             <div class="portfolio-img"><img src="assets/img/portfolio/ml/recommendinator.png" class="img-fluid" alt="project"></div>
             <div class="portfolio-info">
               <h4>Recommendinator</h4>
-              <p>ML</p>
+              <p>ML - Get anime recommendations</p>
               <a href="assets/img/portfolio/ml/recommendinator.png" data-gall="portfolioGallery" class="venobox preview-link" title="Recommendinator"><i class="bx bx-plus"></i></a>
               <a href="https://github.com/hanzala-sohrab/Recommendinator" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
@@ -345,7 +356,7 @@
             <div class="portfolio-img"><img src="assets/img/portfolio/misc/todo-cli.png" class="img-fluid" alt="project"></div>
             <div class="portfolio-info">
               <h4>todo-cli</h4>
-              <p>Misc</p>
+              <p>Misc - Command line based todo app using C++</p>
               <a href="assets/img/portfolio/misc/todo-cli.png" data-gall="portfolioGallery" class="venobox preview-link" title="todo-cli"><i class="bx bx-plus"></i></a>
               <a href="https://github.com/hanzala-sohrab/todo-cli" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
