--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </li>
               <li class="drop-down"><a href="#">CP-TODO</a>
                 <ul>
-                  <li><a href="https://cp-todo.herokuapp.com/">View live</a></li>
+                  <li><a href="https://hanzala.pythonanywhere.com/">View live</a></li>
                   <li><a href="https://github.com/hanzala-sohrab/CP-TODO">View source</a></li>
                 </ul>
               </li>
@@ -99,7 +99,7 @@
         <div class="landing">
           <img src="assets/img/hanzala.jpg" class="hanzala" alt="hanzala">
           <h2 class="animate__animated animate__fadeInDown">Hi 👋, I'm <span>Hanzala Sohrab</span></h2>
-          <p class="animate__animated fanimate__adeInUp">I am a pre-final year student pursuing B.Tech in Information Technology from <br>Birsa Institute of Technology Sindri, Dhanbad.</p>
+          <p class="animate__animated fanimate__adeInUp">Software Engineer Intern at Info Edge | B.Tech, IT (2018-22) | BIT Sindri</p>
           <a href="#education" class="btn-get-started animate__animated animate__fadeInUp scrollto">More about me</a>
           <a href="#portfolio" class="btn-get-started animate__animated animate__fadeInUp scrollto">My projects</a>
         </div>
@@ -172,7 +172,7 @@
                 <ul>
                   <li><i class="ri-check-double-line"></i><b>Course: </b>B.Tech</li>
                   <li><i class="ri-check-double-line"></i><b>Branch: </b>Information Technology</li>
-                  <li><i class="ri-check-double-line"></i><b>CGPA: </b>7.88 (up to 3rd semester)</li>
+                  <li><i class="ri-check-double-line"></i><b>CGPA: </b>8.37 (up to 6th semester)</li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -389,8 +389,8 @@
           <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
               <div class="icon"><i class="ri-code-s-slash-fill"></i></div>
-              <h4 class="title"><a href="">Frameworks</a></h4>
-              <p class="description">Django, React</p>
+              <h4 class="title"><a href="">Frameworks & Libraries</a></h4>
+              <p class="description">Django, Flask, Django REST framework, React</p>
             </div>
           </div>
 <!-- <i class="las la-file-alt" style="color: #3fcdc7;"></i> -->
@@ -400,7 +400,7 @@
                 <i class="ri-tools-fill"></i>
               </div>
               <h4 class="title"><a href="">Tools & Technologies</a></h4>
-              <p class="description">Git, GitHub, GIMP, Linux, Terminal</p>
+              <p class="description">Git, GitHub, GIMP, Linux, Terminal, Docker</p>
             </div>
           </div>
 <!-- <i class="las la-tachometer-alt" style="color:#41cf2e;"></i> -->
