--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="landing">
           <img src="assets/img/hanzala.jpg" class="hanzala" alt="hanzala">
           <h2 class="animate__animated animate__fadeInDown">Hi 👋, I'm <span>Hanzala Sohrab</span></h2>
-          <p class="animate__animated fanimate__adeInUp">Software Engineer Intern at Info Edge | B.Tech, IT (2018-22) | BIT Sindri</p>
+          <p class="animate__animated fanimate__adeInUp">Software Engineer at Info Edge | B.Tech, IT (2018-22) | BIT Sindri</p>
           <a href="#education" class="btn-get-started animate__animated animate__fadeInUp scrollto">More about me</a>
           <a href="#portfolio" class="btn-get-started animate__animated animate__fadeInUp scrollto">My projects</a>
         </div>
